# ConanSettings

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: main.cpp
